--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,6 @@ body {
 }
 .container {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -50px;
-  width: 100px;
-  height: 100px;
 }
 .center {
   display: flex;
@@ -20,6 +14,7 @@ button {
   min-width: 100px;
   height: 100px;
   margin-left: 10px;
+  margin-bottom: 10px;
   border-radius: 4px;
   border: 1px solid rgb(175, 13, 175);
   cursor: pointer;
