--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,21 @@ button {
   color: rgb(105, 10, 105);
   font-weight: 600;
 }
+
+@media only screen and (max-width: 980px) {
+  body {
+    background-color: lightslategray;
+  }
+  button {
+    width: 300px;
+    height: 300px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border: 1px solid rgb(175, 13, 175);
+    cursor: pointer;
+    color: rgb(105, 10, 105);
+    font-weight: 600;
+    font-size: xx-large;
+  }
+}
