--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ button {
   font-weight: 600;
 }
 
-@media only screen and (max-width: 980px) {
+@media only screen and (max-device-width: 600px) {
   body {
     background-color: lightslategray;
   }
@@ -31,7 +31,7 @@ button {
     height: 300px;
     margin-left: 10px;
     margin-bottom: 10px;
-    border-radius: 4px;
+    border-radius: 20px;
     border: 1px solid rgb(175, 13, 175);
     cursor: pointer;
     color: rgb(105, 10, 105);
