--- a/src/styles.css
+++ b/src/styles.css
@@ -11,24 +11,39 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+#buttons {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 button {
-  min-width: 100px;
-  height: 100px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  border-radius: 4px;
+  min-width: 6rem;
+  max-width: 6rem;
+  height: 6rem;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
   border: 1px solid rgb(175, 13, 175);
   cursor: pointer;
   color: rgb(105, 10, 105);
   font-weight: 600;
+  word-wrap: break-word;
 }
+
+button:hover {
+  background-color: rgb(181, 181, 245);
+  color: yellow;
+}
+
 
 @media only screen and (max-device-width: 600px) {
   body {
     background-color: black;
   }
   button {
-    width: 300px;
+    min-width: 300px;
+    max-width: 300px;
     height: 300px;
     margin-left: 10px;
     margin-bottom: 10px;
