--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 body {
-  font-family: sans-serif;
-  background-color: black;
+  font-family: "Libre Franklin", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  background-color: #480CA8;
   touch-action: manipulation;
 }
 .container {
@@ -24,23 +27,23 @@ button {
   margin-left: 0.5rem;
   margin-bottom: 0.5rem;
   border-radius: 0.5rem;
-  border: 1px solid rgb(175, 13, 175);
   cursor: pointer;
-  color: rgb(105, 10, 105);
   font-weight: 600;
   word-wrap: break-word;
+  /* color */
+  background-color: #7209B7;
+  color: #d6c3ff;
+  border: 1px solid #4361EE;
 }
 
 button:hover {
-  background-color: rgb(181, 181, 245);
-  color: yellow;
+  background-color: #B5179E;
+  color: #ffc3de;
+  border: 1px solid rgb(198, 147, 198);
 }
 
 
 @media only screen and (max-device-width: 600px) {
-  body {
-    background-color: black;
-  }
   button {
     min-width: 300px;
     max-width: 300px;
@@ -48,10 +51,12 @@ button:hover {
     margin-left: 10px;
     margin-bottom: 10px;
     border-radius: 20px;
-    border: 1px solid rgb(175, 13, 175);
     cursor: pointer;
-    color: rgb(105, 10, 105);
     font-weight: 600;
     font-size: xx-large;
+    /* color */
+    background-color: #7209B7;
+    color: #d6c3ff;
+    border: 1px solid #4361EE;
   }
 }
