--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital@0;1&display=swap');
 body {
-  font-family: "Libre Franklin", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+
   background-color: #480CA8;
   touch-action: manipulation;
 }
@@ -21,6 +19,11 @@ body {
 }
 
 button {
+  /* fonts */
+  font-family: "Libre Franklin", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   min-width: 6rem;
   max-width: 6rem;
   height: 6rem;
@@ -28,7 +31,6 @@ button {
   margin-bottom: 0.5rem;
   border-radius: 0.5rem;
   cursor: pointer;
-  font-weight: 600;
   word-wrap: break-word;
   /* color */
   background-color: #7209B7;
